--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,4 @@
 # THIS FILE IS FOR EXAMPLE AND DEVELOPMENT PURPOSES ONLY
 
-VITE_AUTH_SECRET="0d847813a47f2012dfed508392f9eb80" # USE YOUR OWN SECRET
-VITE_OPENAI_API_KEY="sk-XXXXXXXXXXXXXXXX" # USE YOUR OWN OPENAI API KEY
+AUTH_SECRET="0d847813a47f2012dfed508392f9eb80" # USE YOUR OWN SECRET
+OPENAI_API_KEY="sk-XXXXXXXXXXXXXXXX" # USE YOUR OWN OPENAI API KEY
